Call nyc service on gateway

--- a/gateway/templates/index.html
+++ b/gateway/templates/index.html
@@ -8,7 +8,7 @@
         <h1>Weather Report System</h1>
         <p>Microservices with Docker Swarm 101</p>
         <div class="row">
-            <div class="col-sm-6 col-md-4">
+            <div class="col-sm-6 col-md-3">
                 <div class="thumbnail">
                     <div class="caption">
                         <h4>Bangkok</h4>
@@ -16,7 +16,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-4">
+            <div class="col-sm-6 col-md-3">
                 <div class="thumbnail">
                     <div class="caption">
                         <h4>Tokyo</h4>
@@ -24,11 +24,19 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-4">
+            <div class="col-sm-6 col-md-3">
                 <div class="thumbnail">
                     <div class="caption">
                         <h4>Munich</h4>
                         <h1 class="jumbotron">{{ munich }}&deg;C</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-3">
+                <div class="thumbnail">
+                    <div class="caption">
+                        <h4>NYC</h4>
+                        <h1 class="jumbotron">{{ nyc }}&deg;C</h1>
                     </div>
                 </div>
             </div>
