Label each box with framework name

--- a/front_gateway/templates/index.html
+++ b/front_gateway/templates/index.html
@@ -13,6 +13,7 @@
                     <div class="caption">
                         <h4>Bangkok</h4>
                         <h1 class="jumbotron">{{ bangkok }}&deg;C</h1>
+                        <p>Powered by <strong>Django</strong></p>
                     </div>
                 </div>
             </div>
@@ -21,6 +22,7 @@
                     <div class="caption">
                         <h4>Tokyo</h4>
                         <h1 class="jumbotron">{{ tokyo }}&deg;C</h1>
+                        <p>Powered by <strong>Golang</strong></p>
                     </div>
                 </div>
             </div>
@@ -29,6 +31,7 @@
                     <div class="caption">
                         <h4>Munich</h4>
                         <h1 class="jumbotron">{{ munich }}&deg;C</h1>
+                        <p>Powered by <strong>Flask</strong></p>
                     </div>
                 </div>
             </div>
@@ -37,6 +40,7 @@
                     <div class="caption">
                         <h4>NYC</h4>
                         <h1 class="jumbotron">{{ nyc }}&deg;C</h1>
+                        <p>Powered by <strong>Ruby on Sinatra</strong></p>
                     </div>
                 </div>
             </div>
