--- a/front_gateway/templates/index.html
+++ b/front_gateway/templates/index.html
@@ -2,6 +2,12 @@
 <head>
     <title>Weather Report System</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<style>
+    body {
+        background-color: black;
+        color: white;
+    }
+</style>
 </head>
 <body>
     <div class="container">
