Remove word "Swarm"

--- a/front_gateway/templates/index.html
+++ b/front_gateway/templates/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <h1>Weather Report System</h1>
-        <p>Microservices with Docker Swarm 101</p>
+        <p>Microservices with Docker 101</p>
         <div class="row">
             <div class="col-sm-6 col-md-3">
                 <div class="thumbnail">
